--- a/src/pages/collection.module.scss
+++ b/src/pages/collection.module.scss
@@ -95,19 +95,20 @@
     display: inline;
   }
 
-  .collection-listing:after {
-    content: "";
-    display: block;
-    width: 150px;
-    height: calc(100% + 25px);
-    position: absolute;
-    top: -1px;
-    right: -9px;
-    z-index: 1000;
-
-    
-    background: linear-gradient(270deg, #F4F5F5 34.6%, rgba(244, 245, 245, 0) 78.29%);
+  .collection-listing {
+    &:after {
+      content: "";
+      display: block;
+      width: 150px;
+      height: calc(100% + 25px);
+      position: absolute;
+      top: -1px;
+      right: -9px;
+      z-index: 1000; 
+      background: linear-gradient(270deg, var(--color-neutrals-100) 34.6%, rgba(244, 245, 245, 0) 78.29%);
+    }
   }
+  
 
   .page-heading {
     margin-bottom: 100px;
@@ -128,6 +129,12 @@
   }
 }
 
+.collection-project-count {
+  margin: 0 2px;
+  padding: 0 2px;
+  border-radius: 3px;
+}
+
 // ==============================================================
 // Responsive styles
 // ==============================================================
@@ -137,7 +144,23 @@
     padding: 0 28px;
   }    
 
-  // .collection-listing {}
+  .collections-page {
+    .collection-listing-header-section {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .collection-listing-header-section-heading {
+      display: block;
+      text-align: center;
+    }
+  
+    .collection-listing-header-section-description {
+      display: block;
+      text-align: center;
+      margin-bottom: 4px;
+    }
+  }  
 }
 
 @media screen and (max-width: 1024px) {
@@ -178,5 +201,21 @@
 
   .collection-listing-header-section-heading {
     margin-top: 20px;
+  }
+
+  .collections-page .collection-listing:after {
+    display: none;
+  }
+
+  .collections-page div.collection-listing-container {
+    margin-top: 40px;
+
+    &:before {
+      transform: skewY(-2deg) translateY(-30px);
+    }
+  }
+
+  .collections-page .page-heading {
+    margin-bottom: 0px;
   }
 }
